# aoop_2025_group12_Alchmey_RPG_game

./: LICENSE  README.md  TODO.md  aoop_2025_group12_alchmey_rpg_game.apk  architecture_review.md  class_diagram.md  flake8.ini  generate_structure.py  index.html  main.py  player_data.json  png_processer.py  project_optimization_analysis.md  pyproject.toml  requirements.txt  計劃書.drawio
.github/workflows/: deploy.yml
backup/: dungeon.py
data/saves/: player_data.json
dev-test/: aoop_2025_group12_alchmey_rpg_game.apk
docs/architecture/: structure.md
docs/design/: game_design.md
src/: audio_manager.py  config.py  dungeon_manager.py  ecs_factory.py  entity_manager.py  event_manager.py  game.py  menu_manager.py  render_manager.py  storage_manager.py
src/buffs/: element_buff.py
src/character/: character.py
src/core/: config.py  game.py
src/dungeon/: bridge.py  bsp_node.py  dungeon.py  room.py
src/ecs/: ai.py  components.py  systems.py  test.py
src/enemy/: basic_enemy.py
src/entities/: NPC.py  attack_entity.py  basic_entity.py  buff.py  buffable_entity.py  damage_text.py  ecs_factory.py  element_buff_library.py  entity_manager.py  health_entity.py  movable_entity.py  movement_entity.py
src/manager/: dungeon_manager.py  entity_manager.py  event_manager.py  menu_manager.py  render_manager.py  (+1 more)
tests/: __init__.py  test_bsp_generator.py  test_config_loader.py  test_corridor_generator.py  test_door_generator.py  test_dungeon_builder.py  test_dungeon_integration.py  test_ecs_factory.py  test_graph_algorithms.py  test_pathfinding.py  test_room_placer.py  test_room_type_assigner.py  test_tile_manager.py
(+156 files in other folders)
